--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,206 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  height: 100%;
+}
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  line-height: 1.235;
+}
+img {
+  max-width: 100%;
+  display: block;
+}
+#root {
+  width: 420px;
+  max-width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+}
+.screen {
+  width: 100%;
+  height: 100%;
+}
+.screen-login {
+  background:url('./assets/bg.png') no-repeat bottom center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+}
+.ciplalogo {
+  width: 70px;
+  align-self: flex-end;
+  margin-top: 0.8rem;
+  margin-right: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+.oasislogoSmall {
+  max-width: 240px;
+  align-self: center;
+}
+.btn {
+  background: #3055a5;
+  background-image: linear-gradient(to bottom, #567dd1, #3055a5);
+  border-radius: 0.5rem;
+  border: 1px solid #ddd;
+  box-shadow: -4px 4px 5px -3px rgba(0,0,0,0.5);
+  color: #fff;
+  font-size: 1rem;
+  font-family: inherit;
+  padding: 0.75rem 2rem;
+  font-weight: bold;
+  border: 0;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+}
+.btn2 {
+  background: #3055a5;
+  background-image: linear-gradient(to bottom, #567dd1, #3055a5);
+  border-radius: 0.25rem;
+  border: 1px solid #ddd;
+  box-shadow: -4px 4px 5px -3px rgba(0,0,0,0.5);
+  color: #fff;
+  font-size: 0.875rem;
+  font-family: inherit;
+  padding: 0.325rem 1rem;
+  font-weight: bold;
+  border: 0;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+}
+.form-layout {
+  align-self: center;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.5rem 1rem;
+  border-radius: 0.5rem;
+  min-width: 300px;
+  gap: 1rem;
+  margin-top: 1rem;
+  box-shadow: 4px 4px 10px -6px rgba(0,0,0,0.5);
+  position: relative;
+}
+.form-group {
+  position: relative;
+  width: 100%;
+}
+.form-control {
+  width: 100%;
+  display: block;
+  padding: 0.75rem 1rem;
+  font-family: inherit;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ddd;
+  box-shadow: inset 2px 2px 5px rgba(0,0,0,0.1);
+}
+.required {
+  position: relative;
+}
+.required:after {
+  content: '*';
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  color: red;
+  font-weight: bold;
+  font-family: inherit;
+}
+.mandatoryText {
+  font-size: 0.65rem;
+  color: #a1a1a1;
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.75rem;
+}
+.popOvarlay {
+  background: rgba(0,0,0,0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+.photoFrame {
+  width: 200px;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  position: relative;
+}
+.photoFrame img {
+  width: 100%;
+}
+.changePhoto {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.5);
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  padding: 0.375rem 1rem;
+}
+.screen-selfie {
+ background: #3055a5; 
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+ gap: 1rem;
+}
+.fullImg {
+  width: 300px;
+}
+.userImg {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  overflow: hidden;
+  background: #3055a5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 170px;
+}
+.userImg img {
+  width: 85px;
+  height: 85px;
+  border-radius: 100%;
+}
+.userContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #3055a5;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 300px;
+}
+.userName {
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+.userPlace {
+  text-transform: capitalize;
 }
