--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,7 @@ img {
 }
 .fullImg {
   width: 300px;
+  position: relative;
 }
 .userImg {
   width: 100px;
@@ -177,7 +178,7 @@ img {
   left: 0;
   right: 0;
   margin: 0 auto;
-  top: 170px;
+  top: 140px;
 }
 .userImg img {
   width: 85px;
@@ -194,7 +195,7 @@ img {
   left: 0;
   right: 0;
   margin: 0 auto;
-  top: 300px;
+  top: 250px;
 }
 .userName {
   font-weight: bold;
