--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ img {
   max-width: 100%;
   margin: 0 auto;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 .screen {
   width: 100%;
