--- a/src/index.css
+++ b/src/index.css
@@ -17,28 +17,67 @@ img {
   display: block;
 }
 #root {
-  width: 420px;
-  max-width: 100%;
-  margin: 0 auto;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  background:url('./assets/bg.png') no-repeat bottom center;
+  background-size: cover;
+}
+#root.changeBg {
+  background-color: transparent;
+}
+#root.changeBg:after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255,255,255,0.5);
 }
 .screen {
   width: 100%;
   height: 100%;
+  width: 500px;
+  max-width: 100%;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
 }
 .screen-login {
-  background:url('./assets/bg.png') no-repeat bottom center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr repeat(1, auto) 1fr;
+  grid-row-gap: 5px;
+  justify-items: center;
+  padding: 1rem;
 }
+.screen-selfie {
+  display: grid;
+  grid-template-rows: 1fr repeat(1, auto) 1fr;
+  grid-row-gap: 5px;
+  justify-items: center;
+  padding: 1rem;
+  overflow-y: auto;
+ }
 .ciplalogo {
   width: 70px;
-  align-self: flex-end;
-  margin-top: 0.8rem;
-  margin-right: 0.8rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: auto;
+  grid-row-start: 1;
+  justify-self: flex-end;
+}
+.formUnit {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.canvasUnit {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 .oasislogoSmall {
   max-width: 240px;
@@ -84,7 +123,7 @@ img {
   align-items: center;
   padding: 1.5rem 1rem;
   border-radius: 0.5rem;
-  min-width: 300px;
+  width: 100%;
   gap: 1rem;
   margin-top: 1rem;
   box-shadow: 4px 4px 10px -6px rgba(0,0,0,0.5);
@@ -154,16 +193,13 @@ img {
   width: 100%;
   padding: 0.375rem 1rem;
 }
-.screen-selfie {
- background: #3055a5; 
- display: flex;
- align-items: center;
- justify-content: center;
- flex-direction: column;
- gap: 1rem;
+.innerFrame {
+  border: 4px solid #3055a5;
+  border-radius: 4px;
+  box-shadow: 4px 4px 12px -4px rgba(0,0,0,0.8);
 }
 .fullImg {
-  width: 300px;
+  width: 320px;
   position: relative;
 }
 .userImg {
@@ -205,4 +241,54 @@ img {
 }
 .userPlace {
   text-transform: capitalize;
+}
+.loadingScreen {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 111;
+  background: rgba(0,0,0,0.75);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  flex-direction: column;
+  gap: 1rem;
+}
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
